4/3/12 move formatting of equation in reduced form from model to view
4/3/12 constrain drag range of line manipulators to match equation constraints
4/3/12 use nearest-neighbor rounding instead of truncation when computing reduced form of equation
4/3/12 rename spinner button images
4/3/12 tweak font sizes
4/3/12 delete JSpinner-based equation implementation [63011]
4/3/12 color code the spinner buttons to match the line manipulators
4/3/12 replace JSpinners with SpinnerButtonNode from fractions project
4/3/12 drag handler base class for line manipulators
4/3/12 add rise/run/intercept parameters to sim-sharing messages for line manipulators
4/3/12 misc cleanup
4/3/12 scale bracket tip with when bracket width is < a threshold
4/3/12 first pass at drag handlers for line manipulators (glitchy, behavior doesn't match requirements)
4/3/12 use white for all piccolo buttons until we work out more important color-coding issues
4/3/12 3D look for line manipulators
4/2/12 check for run==0 before rise==0
4/2/12 show reduced equations on lines
4/2/12 show unreduced equations on lines
4/2/12 add equations (placeholder) to lines
4/2/12 make "Reset All" button white until we decide on colors
4/2/12 add rise/run icon
4/2/12 replace MinimizeMaximizeButtonNode with ToggleButtonNode
4/2/12 load common images statically in LGResources
4/2/12 use transparent background behind control panel title
4/2/12 factor out LineManipulatorNode, so we can play with look of this
4/2/12 round corners of rise/run brackets
4/2/12 add quick-and-dirty icons for visibility controls related to lines
4/2/12 point tool icon for control panel
4/2/12 adjust point tool image and font to fit (-10,-10)
3/30/12 add point tool
3/30/12 convert line model to double precision, to support continuous dragging
3/30/12 handle cases where rise or run is zero
3/30/12 change "Graph Lines" check box to "Lines"
3/30/12 add rise and run brackets, wire up to check boxes