@@ -1,3 +1,4 @@
+4/4/12 add horizontal separators for titles in control panels
 4/3/12 move formatting of equation in reduced form from model to view
 4/3/12 constrain drag range of line manipulators to match equation constraints
 4/3/12 use nearest-neighbor rounding instead of truncation when computing reduced form of equation
